export interface Window {
    draw(): void
}

export interface Button {
    draw(): void
}
