import { Button } from "../../abstract-layer/primitives";

export class WindowsButton implements Button {
    draw() {
        console.log("Draw windows button");
    }
}
