import { Window } from "../../abstract-layer/primitives";

export class WindowsWindow implements Window {
    draw() {
        console.log("Draw windows window");
    }
}
